--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
         </div>
     </section>
-    <div class="benefits">
+    <div id="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
